# thesis

./: .gitignore  CARA_JALANKAN_REAL.txt  CLEANUP_SUMMARY.md  DASHBOARD_ACCESS.md  DASHBOARD_FIX.md  DASHBOARD_FIXED_FINAL.md  DEPLOYMENT_READY_SUMMARY.txt  DQN_QTable_Snippet.pptx  FINAL_STATUS.txt  FIRMWARE_FIXED.txt  FIXED_ISSUES.txt  FIXED_SUMMARY.md  FIX_DASHBOARD_CONNECTION.md  FIX_IPSEC_TUNNEL.md  HOTSPOT_FIX.txt  IPSEC_FIXED.md  N3IWF_ARCHITECTURE_PROMPT.md  OUTPUT_RESULTS.md  PANDUAN_MENJALANKAN_SISTEM.md  PROTOCOL_UPDATE.txt  PUSH_DATA_GUIDE.md  QTable_Slide.pptx  QUICK_FIX_DASHBOARD.md  QUICK_START.md  README.md  REAL_IMPLEMENTATION_GUIDE.txt  SINGLE_COMMAND_USAGE.md  START_HERE.md  SYSTEM_ARCHITECTURE.txt  TROUBLESHOOTING.md  TROUBLESHOOT_DASHBOARD.md  UPDATE_RPI5.txt  analyze_all.py  analyze_pcap.py  capture_qos.sh  diagnose.py  diagnose_dashboard.sh  diagnose_ipsec.sh  diagnose_network_stats.sh  diagnose_wifi.py  (+25 more)
.claude/: settings.local.json
analysis_output/: generate_report.py
backup_v1_control_system/: N3IWF_ARCHITECTURE_PROMPT.md  aquaculture.service  filter_data.py  start_edge.sh
data_collection_test/: CMakeLists.txt  fql_inference.c  fql_inference.h  main.c  ph_sensor.h  plot_data.py
dqn/: train_dqn.py
fql/: fql_agent.py  pretrain_fql.py
fql_rpi/: aerator_sim.py  analyze_fql.py  aquaculture.service  main.py  (+26 more)
pico_firmware/: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  COMPILE_SUCCESS.txt  FLASH_GUIDE.txt  README.md  USB_SERIAL_FIX.txt  build.sh  ds18b20.c  ds18b20.h  fql_inference.c  fql_inference.h  lwipopts.h  main.c  ph_sensor.c  ph_sensor.h
(+177 files in other folders)
